# backend-todo

./: Dockerfile  api-docs-my-project.html  docker-compose.yaml  pyproject.toml  save_redoc.py
.devcontainer/: Dockerfile  devcontainer.json
.stdudy/: memo.md
api/: db.py  main.py  migrate_db.py
api/cruds/: done.py  task.py
api/models/: task.py
api/routers/: done.py  task.py
api/schemas/: task.py
backend/: Dockerfile_prod  README.md
backend/app/: db.py  main.py  migrate_db.py
backend/app/cruds/: task.py
backend/app/models/: task.py
backend/app/routers/: task.py
backend/app/schemas/: task.py
backend/app/tests/: test_main.py
backend/docs/: api-docs-my-project.html
tests/: test_main.py
